--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,24 @@
 <html>
 <head>
   <title>Ma9test</title>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <%= csrf_meta_tags %>
+  <script>
+var map;
+function initialize() {
+  var mapOptions = {
+    zoom: 16,
+    center: new google.maps.LatLng(35.655, 139.748),
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
+  map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
 </head>
 <body>
 
