--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,15 +1,10 @@
 <h1>じゃらんAPIテスト用</h1>
 
-<%#= radio_button_tag 'location', 'osaka', {:checked => true} %>
-<!-- 大阪 -->
-<%#= radio_button_tag 'location', 'matsue' %>
-<!-- 松江 -->
-
-<%= form_tag("top/availability", :remote=>true, :id=>"frmGpsLatLng") do %>
+<%= form_tag("top/availability", :remote=>true, :method => :get, :id=>"frmGpsLatLng") do %>
 	<%= hidden_field_tag 'hdn[lat]' %>
 	<%= hidden_field_tag 'hdn[lng]' %>
 <% end %>
 
-<%= text_area_tag 'hoge', @jalan %>
+<%#= text_area_tag 'hoge', @jalan %>
 
 <div id="map-canvas"></div>
