--- a/app/views/top/availability.js.erb
+++ b/app/views/top/availability.js.erb
@@ -10,7 +10,8 @@ var markerArray = new Array();
 	markerArray.push({
 		position: new google.maps.LatLng("<%= val['X'] %>","<%= val['Y'] %>"),
 		title: "<%= val['HotelName'] %>",
-		content: content
+		content: content,
+		rate: "<%= val['Rate'] %>"
 	});
 <% } %>
 
