--- a/app/views/top/availability.js.erb
+++ b/app/views/top/availability.js.erb
@@ -17,4 +17,7 @@ var markerArray = new Array();
 
 setMarkerData(markerArray);
 
+// コンビニ検索
+placeSearch();
+
 // $('#hoge').val("<%=j @jalan.to_s %>");
